test/bad/initialization.prog
/* every definition in stream state or output must be initialized in initial, functions are no exception*/

stream main
input 
state 
    tail l = match l with {
        h:t -> t;
        [] -> []
        };
    head l = match l with {
        h:t -> 1@h;
        [] -> 2@()
        };
    buf :: [char];
    buf = tail buf
output 
    print = head buf
initial 
    buf = "Hello world!", 
    print = 2 @ ()

